# mHC-triton

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py
src/mhc/: __init__.py  _backward.py  _kernels.py  _torch_baseline.py  module.py  ops.py
tests/: __init__.py  test_mhc.py
