[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mHC-triton"
version = "0.1.0"
description = "Manifold-Constrained Hyper-Connections with fused Triton kernels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chandan Akiti"},
    {name = "Sai Ajay Modukuri"},
]
maintainers = [
    {name = "NucleusAI"},
]
keywords = ["deep-learning", "triton", "pytorch", "transformer", "hyper-connections"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.urls]
"Homepage" = "https://github.com/WithNucleusAI/mHC-triton"
"Paper" = "https://arxiv.org/html/2512.24880"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

